--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,62 +1,54 @@
 ---
+import Config from "../config.cjs";
+import dayjs from "dayjs";
+
 export interface Props {
-	title: string;
-	body: string;
-	href: string;
+  post: any;
 }
 
-const { href, title, body } = Astro.props;
+const { post } = Astro.props;
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
-</li>
-<style>
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 0.15rem;
-		background-color: white;
-		background-image: var(--accent-gradient);
-		background-size: 400%;
-		border-radius: 0.5rem;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
-	}
-
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: 1rem 1.3rem;
-		border-radius: 0.35rem;
-		color: #111;
-		background-color: white;
-		opacity: 0.8;
-	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-		color: #444;
-	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent));
-	}
-</style>
+<div class="col-lg-6">
+  <div class="card card-hover mb-5 mx-lg-2">
+    <div class="card-body pt-5 px-5 pb-4 text-center">
+      {
+        post.frontmatter.categories &&
+          post.frontmatter.categories.map((categorie: any) => (
+            <a
+              href={`${Config.siteBaseUrl}categorie/${categorie}/`}
+              class="d-inline-block link-cta mb-4 text-uppercase"
+            >
+              {categorie}
+            </a>
+          ))
+      }
+      <h2 class="card-title mb-4">
+        <a
+          class="stretched-link"
+          href={`${Config.siteBaseUrl}posts/${post.frontmatter.slug}`}
+          >{post.frontmatter.title}</a
+        >
+      </h2>
+      <p class="small">
+        <span class="text-uppercase"
+          >{dayjs(post.frontmatter.date).format(Config.dateFormat)}</span
+        >
+      </p>
+      <p class="card-text">{post.frontmatter.description}</p>
+      <p>
+        {
+          post.frontmatter.tags &&
+            post.frontmatter.tags.map((tag: any) => (
+              <a
+                href={`${Config.siteBaseUrl}tag/${tag}/`}
+                class="link-tag text-dark"
+              >
+                #{tag}
+              </a>
+            ))
+        }
+      </p>
+    </div>
+  </div>
+</div>
