--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const socialCount = SOCIALS.filter((social) => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Franklin's Blog</h1>
+      <h1>Franklin's Blog 💻</h1>
       <a
         target="_blank"
         href="/rss.xml"
