--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const socialCount = SOCIALS.filter((social) => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Franklin's Blog 💻</h1>
+      <h1>Franklin</h1>
       <a
         target="_blank"
         href="/rss.xml"
@@ -44,12 +44,13 @@ const socialCount = SOCIALS.filter((social) => social.active).length;
 
       <p>
         Welcome to my blog about web technologies! Here, you'll find posts about
-        web and mobile development, as well as tips and tutorials for building
-        and maintaining your own websites. We'll be covering popular
-        technologies such as NeoVim, JavaScript, TypeScript, React, React
-        Native, NextJS, GraphQL and Tailwind CSS. I'll be sharing my experiences
-        with these tools and frameworks, as well as providing insight into best
-        practices for using them in your own projects.
+        web development. It will include tips and tutorials for building and
+        maintaining your own websites. We'll be covering popular technologies
+        such as NeoVim, GraphQL, React Native, NextJS, TypeScript, React, and
+        Tailwind CSS. I'll be sharing my experiences with these tools and
+        frameworks, as well as providing insight into best practices for using
+        them in your own projects. We'll also explore topics such as responsive
+        design, performance optimization, and more.
       </p>
       <p>
         Read the blog posts or check
